Round 1 of EMM stuff
A pile of city center, wilderness maps.
a pile of new PCPs for city center, wilderness, 2 new train PCPs, some other ones in addition.
some new parcels, such as 2 more UFOs, some more city center stuff for one of the new maps, small landing pads and a small jail building.

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -74,3 +74,325 @@
 
 +arrAllPCPDefs=(MapName="WLD_Convoy_SupplyExtract_16x48_02",  arrPlotTypes[0]="Wilderness", \\
 	strPCPType="AdventConvoy", strTurnType="SupplyExtract", iWidth=16, iLength=48)
+
+; EMM PCPs
+
+;!!X08!!
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_01", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_02", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_03", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_04", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_05", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_01", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_02", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_03", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_04", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_05", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x08_06", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=8)
+
+;!!x16!!
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_01", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_02", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_03", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_04", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_05", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_06", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Street_Str_08x16_AdventCP2_07", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Blvd_Str_16x16_AdventCP2_01", \\
+	strPCPType="Boulevard", strTurnType="Straight", iWidth=16, iLength=16, \\
+	arrPlotTypes[0]="CityCenter", bAdventCheckpoint=true)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_01", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_02", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_03", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_04", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_05", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x16_06", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Court", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_01", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_02", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_03", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_04", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_05", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="CTY_Plaza_Str2_08x16_06", arrPlotTypes[0]="CityCenter", \\
+	strPCPType="Plaza", strTurnType="Straight", iWidth=8, iLength=16)
+
+; EMM Wilderness
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Raise_01",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+	
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Raise_02",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Raise_03",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Raise_01",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Raise_02",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Raise_03",      strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16,      arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Highway_Str_16x16_Shanty_01",    arrPlotTypes[0]="Wilderness", strPCPType="Highway", strTurnType="Straight", iWidth=16, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Coast_Water_08x08_02",			  strPCPType="Coast", strTurnType="Water", iWidth=8, iLength=8,				arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Coast_Water_08x08_03",			  strPCPType="Coast", strTurnType="Water", iWidth=8, iLength=8,				arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_01",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_02",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_Null",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_03",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Null_01",			  strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
+; Don't need more of these empty ones
+;+arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Null_02",			  strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
+;+arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Null_01",			  strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
+;+arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Null_02",			  strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Rock_01", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Rock_02", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Rock_03", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Trees_01", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Trees_02", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16__Trees_03", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x16_01", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x16_02", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x16_03", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_StrB_08x16_01", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_StrB_08x16_02", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_StrB_08x16_03", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Stream2_StrC_16x16_01", \\
+	strPCPType="Stream", strTurnType="Straight", iWidth=16, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	arrBiomeTypes[0]="Temperate", arrBiomeTypes[1]="Tundra")
+
++arrAllPCPDefs=(MapName="WLD_Stream2_StrC_16x16_02", \\
+	strPCPType="Stream", strTurnType="Straight", iWidth=16, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	arrBiomeTypes[0]="Temperate", arrBiomeTypes[1]="Tundra")
+
++arrAllPCPDefs=(MapName="WLD_Stream2_Str_16x16_01", \\
+	strPCPType="Stream", strTurnType="Straight", iWidth=16, iLength=16, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	arrBiomeTypes[0]="Temperate", arrBiomeTypes[1]="Tundra")
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Large_01", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Large_02", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	strPCPType="Wilderness", arrBiomeTypes[0]="Temperate", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Large_03", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	strPCPType="Wilderness", arrBiomeTypes[0]="Temperate", strTurnType="Forest", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x16_Large_04", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", \\
+	strPCPType="Wilderness", arrBiomeTypes[0]="Temperate", strTurnType="Forest", iWidth=8, iLength=16)
+
+
+;!!x08!!
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Rock_01", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Rock_02", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Rock_03", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Rock_04", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Trees_01", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Trees_02", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Trees_03", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Trees_04", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
+	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
+
+
+; Not rebuilt yet:
+
++arrAllPCPDefs=(MapName="WLD_RavineTop2_Str_08x08_01", \\
+	strPCPType="RavineTop", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_RavineTop2_Str_08x08_02", \\
+	strPCPType="RavineTop", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_RavineTop2_CrnIn_08x08_01", \\
+	strPCPType="RavineTop", strTurnType="CornerIn", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_RavineTop2_CrnIn_08x08_02", \\
+	strPCPType="RavineTop", strTurnType="CornerIn", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_01", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_02", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_03", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_04", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_Indent", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_Indent_02", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_Indent_03", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_Indent_04", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_Str_08x08_Indent_05", \\
+	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_CrnIn_08x08_01", \\
+	strPCPType="Ravine", strTurnType="CornerIn", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_CrnIn_08x08_02", \\
+	strPCPType="Ravine", strTurnType="CornerIn", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
++arrAllPCPDefs=(MapName="WLD_Ravine2_CrnIn_08x08_03", \\
+	strPCPType="Ravine", strTurnType="CornerIn", iWidth=8, iLength=8, \\
+	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
+
+; EMM Slums
++arrAllPCPDefs=(MapName="SLM_Overpass_Str_16x16_01_Advent", arrPlotTypes[0]="Slums",			 strPCPType="Overpass", strTurnType="Straight", iWidth=16, iLength=16)
+
+; trains
+
++arrAllPCPDefs=(MapName="SLM_Train_Cargo2_16x64_01",  arrPlotTypes[0]="Slums", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Recover_Train", ObjectiveTags[1]="Hack_Train")
+
++arrAllPCPDefs=(MapName="SLM_Train_Cargo2_16x64_02",  arrPlotTypes[0]="Slums", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Recover_Train")
