--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -17,6 +17,41 @@
 +arrPlots=(MapName="Plot_SLM_LgObj_12_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_SLM_MdObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="MediumPlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 
+; EMM City ones
++arrPlots=(MapName="plot_CTY_SmObj_AdventSecurity_EMM", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council")
+
++arrPlots=(MapName="plot_CTY_LgObj_CornerCanal_EMM_01", strType="CityCenter", FloorCount=4, \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
+
++arrPlots=(MapName="plot_CTY_SmObj_CornerCanal_EMM_01", strType="CityCenter", FloorCount=4, \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
+
++arrPlots=(MapName="plot_CTY_MdObj_Plazas_EMM_01", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="SabotageCC")
+
++arrPlots=(MapName="plot_CTY_LgObj_Plazas_EMM_02", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract")
+
++arrPlots=(MapName="plot_CTY_MdObj_Plazas_EMM_03", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Extract")
+
++arrPlots=(MapName="plot_CTY_LgObj_Roads_EMM_01", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract")
+
++arrPlots=(MapName="plot_CTY_MdObj_Roads_EMM_03", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="SabotageCC", ObjectiveTags[4]="Vehicle")
+
+; Too small
+;+arrPlots=(MapName="plot_CTY_MdObj_S_EMM_01", strType="CityCenter", \\
+;	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract")
+
++arrPlots=(MapName="plot_CTY_MdObj_A_EMM_01", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="SabotageCC", ObjectiveTags[4]="Vehicle")
+
++arrPlots=(MapName="plot_CTY_LgObj_H_EMM_01", strType="CityCenter", \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
+
 ; SLM_Overpass_LgObj_10_LW is now fixed, if it's still broken for you, you need the latest content directories if you're building your own LWOTC install
 +arrPlots=(MapName="Plot_SLM_Overpass_LgObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_10_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
@@ -55,6 +90,8 @@
 
 +arrPlots=(MapName="Plot_RVS_Highway_LgObj_01_LW", strType="Wilderness",      ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra",      ObjectiveTags[0]="Rendezvous", ObjectiveTags[1]="CovertEscape_NonPCP")
 +arrPlots=(MapName="Plot_RVS_Highway_MdObj_01_LW", strType="Wilderness",      ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra",      ObjectiveTags[0]="Rendezvous", ObjectiveTags[1]="CovertEscape_NonPCP")
++arrPlots=(MapName="plot_RDV_LgObj_EMM_01", strType="Wilderness", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", ObjectiveTags[0]="Rendezvous", ObjectiveTags[1]="CovertEscape_NonPCP")
++arrPlots=(MapName="plot_RVS_LgObj_EMM_02", strType="Wilderness", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", ObjectiveTags[0]="Rendezvous", ObjectiveTags[1]="CovertEscape_NonPCP")
 
 ; Resistance Convoy - doesn't work
 +arrPlots=(MapName="Plot_CVY_ResistanceConvoy_01_LW", strType="Wilderness", ExcludeFromStrategy=true, ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="ResistanceConvoy_LW")
@@ -80,6 +117,32 @@
 +arrPlots=(MapName="Plot_WLD_Stream_LgObj_02", strType="Wilderness", \\
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
 	ObjectiveTags[0]="Sabotage", ObjectiveTags[1]="SecureUFO", ObjectiveTags[2]="GP_PsiGate")
+
+; EMM Wilderness plots:
+
++arrPlots=(MapName="plot_WLD_LgObj_Sabotage_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Sabotage")
+
++arrPlots=(MapName="plot_WLD_LgObj_Sabotage_EMM_02", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Sabotage")
+
++arrPlots=(MapName="plot_WLD_LgObj_Sabotage_EMM_03", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Sabotage")
+
++arrPlots=(MapName="plot_WLD_LgObj_UFO_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="SecureUFO", FloorCount=4)
+
++arrPlots=(MapName="plot_WLD_LgObj_UFO_EMM_02", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="SecureUFO")
+
++arrPlots=(MapName="plot_WLD_LgObj_UFO_EMM_03", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="SecureUFO")
 
 ; New modified one from map pack:
 
