--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -123,6 +123,10 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
    arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventDepot", \\
    eFacing=EParcelFacingType_S, ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", bAllowNonObjectiveOverride=true)
 
++arrAllParcelDefinitions=(MapName="sm_AdventFOB", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="Abandoned"), arrZoneTypes[0]="Waterfront", \\
+	ObjectiveTags[0]="DestroyRelay", ObjectiveTags[1]="NeutralizeCommander", ObjectiveTags[2]="SupplyExtraction", ObjectiveTags[3]="ProtectDevice", ObjectiveTags[4]="DestroyTransmitter", bAllowNonObjectiveOverride=true)
+
 
 ; modified Advent Security parcels for City Center HQs
 
@@ -152,3 +156,35 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 +arrAllParcelDefinitions=(MapName="md_InterrogationCompound_02_LW", eSize=eParcelSizeType_Medium, \\
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventCompound", arrZoneTypes[1]="AdventCompoundHQ", eFacing=EParcelFacingType_S, \\
 	ObjectiveTags[0]="RescueCompound", bAllowNonObjectiveOverride=true)
+
+; EMM parcels for UFOs
+
++arrAllParcelDefinitions=(MapName="lg_UFO_Transport", eSize=eParcelSizeType_Large,  \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), \\
+	ObjectiveTags[0]="SecureUFO")
+
++arrAllParcelDefinitions=(MapName="lg_UFO_Supply", eSize=eParcelSizeType_Large,  \\
+	arrPlotTypes[0]=(strPlotType="Wilderness"), \\
+	ObjectiveTags[0]="SecureUFO")
+
+; EMM parcels for AdventSecurity
+
++arrAllParcelDefinitions=(MapName="sm_AdventJail", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="AdventSecurity", eFacing=EParcelFacingType_N, \\
+	ObjectiveTags[0]="Rescue", ObjectiveTags[1]="Neutralize", ObjectiveTags[2]="Jailbreak_LW", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="sm_CCLanding_01", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", arrZoneTypes[2]="AdventSecurity")
+
++arrAllParcelDefinitions=(MapName="sm_CCLanding_02", eSize=eParcelSizeType_Small, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[2]="AdventSecurity")
+
+; EMM Monuments
+
++arrAllParcelDefinitions=(MapName="md_Monument_04", eSize=eParcelSizeType_Medium, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, \\
+	ObjectiveTags[0]="SabotageCC")
+
++arrAllParcelDefinitions=(MapName="md_Monument_05", eSize=eParcelSizeType_Medium, \\
+	arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, \\
+	ObjectiveTags[0]="SabotageCC")
