tunnel PCP defs
from EMM

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -77,6 +77,18 @@
 
 ; EMM PCPs
 
++arrAllPCPDefs=(MapName="TUN_Floor_Str_16x05_01_EMM", \\
+	arrPlotTypes[0]="Tunnels_Subway", arrPlotTypes[1]="Tunnels_Sewer", \\
+	strPCPType="Floor", strTurnType="Str", iWidth=5, iLength=16)
+
++arrAllPCPDefs=(MapName="TUN_Floor_Str_16x05_02_EMM", \\
+	arrPlotTypes[0]="Tunnels_Subway", arrPlotTypes[1]="Tunnels_Sewer", \\
+	strPCPType="Floor", strTurnType="Str", iWidth=5, iLength=16)
+
++arrAllPCPDefs=(MapName="TUN_Floor_Str_16x05_03_EMM", \\
+	arrPlotTypes[0]="Tunnels_Subway", arrPlotTypes[1]="Tunnels_Sewer", \\
+	strPCPType="Floor", strTurnType="Str", iWidth=5, iLength=16)
+
 ;!!X08!!
 
 +arrAllPCPDefs=(MapName="CTY_Plaza_Court2_08x08_01", arrPlotTypes[0]="CityCenter", \\
