Map stuff round 2
Enable basically all the other maps, fix bugs reported from round 1.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -357,6 +357,9 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 
 ; +VeryLargeMaps=MapName2
 
++VeryLargeMaps=plot_CTY_MdObj_Pier_EMM_01
++VeryLargeMaps=plot_CTY_MdObj_Bridge_EMM_01
+
 +ActivityRewardScalars=(ActivityName=Propaganda, RewardScalar=1.15)
 
 [LW_Overhaul.X2StrategyElement_LWMissionSources]
