--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -222,6 +222,8 @@
 
 +arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_03",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
 
++arrAllPCPDefs=(MapName="WLD_Ravine_CrnOut2_08x08_04",		  strPCPType="Ravine", strTurnType="CornerOut", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
+
 +arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Null_01",			  strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8,		arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown")
 
 ; Don't need more of these empty ones
@@ -328,9 +330,6 @@
 +arrAllPCPDefs=(MapName="WLD_Wilderness_08x08_Trees_04", arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty", arrPlotTypes[2]="SmallTown", \\
 	strPCPType="Wilderness", strTurnType="Forest", iWidth=8, iLength=8)
 
-
-; Not rebuilt yet:
-
 +arrAllPCPDefs=(MapName="WLD_RavineTop2_Str_08x08_01", \\
 	strPCPType="RavineTop", strTurnType="Straight", iWidth=8, iLength=8, \\
 	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
@@ -383,6 +382,7 @@
 	strPCPType="Ravine", strTurnType="Straight", iWidth=8, iLength=8, \\
 	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
 
+
 +arrAllPCPDefs=(MapName="WLD_Ravine2_CrnIn_08x08_01", \\
 	strPCPType="Ravine", strTurnType="CornerIn", iWidth=8, iLength=8, \\
 	arrPlotTypes[0]="Wilderness", arrPlotTypes[1]="Shanty")
@@ -408,3 +408,18 @@
 +arrAllPCPDefs=(MapName="SLM_Train_Cargo2_16x64_02",  arrPlotTypes[0]="Slums", \\
 	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
 	ObjectiveTags[0]="Recover_Train")
+
+; EMM Small Town
+
++arrAllPCPDefs=(MapName="TWN_Blvd_Str_16x16_AdventTruck_02", \\
+	strPCPType="Boulevard", strTurnType="Straight", iWidth=16, iLength=16, \\
+	arrPlotTypes[0]="SmallTown", ObjectiveTags[0]="Recover_Vehicle")
+
++arrAllPCPDefs=(MapName="TWN_Fence_08x08_Null_01", arrPlotTypes[0]="SmallTown", \\
+	strPCPType="Fence", strTurnType="Straight", iWidth=8, iLength=8)
+
++arrAllPCPDefs=(MapName="TWN_Street_Str_08x16_Null_01", arrPlotTypes[0]="SmallTown", \\
+	strPCPType="Street", strTurnType="Straight", iWidth=8, iLength=16)
+
++arrAllPCPDefs=(MapName="TWN_Lot_08x08_01", arrPlotTypes[0]="SmallTown", \\
+	strPCPType="Lot", strTurnType="Straight", iWidth=8, iLength=8) 
