--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -274,3 +274,139 @@
 +arrPlots=(MapName="Plot_WLD_Convoy_Stream_02_LW", strType="Wilderness", \\
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
 	ObjectiveTags[0]="SupplyRaidConvoy")
+
+; more EMM plots:
+
+;;SLUMS;;
+
++arrPlots=(MapName="plot_SLM_MdObj_CanalAve_EMM_01", strType="Slums", FloorCount=4, \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
+
++arrPlots=(MapName="plot_SLM_LgObj_Avenue_EMM_01", strType="Slums", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
++arrPlots=(MapName="plot_SLM_MdObj_Fork_EMM_01", strType="Slums", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
++arrPlots=(MapName="plot_SLM_LgObj_Dense_EMM_01", strType="Slums", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
++arrPlots=(MapName="plot_SLM_MdObj_Transit_EMM_03", strType="Slums", \\
+	ObjectiveTags[0]="GOps_Vehicle", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
++arrPlots=(MapName="plot_SLM_LgObj_Dense_EMM_02", strType="Slums", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
+;;SHANTY;;
+
++arrPlots=(MapName="plot_SHM_LgObj_Village_EMM", strType="Shanty", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="Retalliation", ObjectiveTags[1]="ChosenRetaliation")
+
++arrPlots=(MapName="plot_SHN_Wind_EMM_01", strType="Shanty", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="Retalliation", ObjectiveTags[1]="ChosenRetaliation")
+
+;;WILDERNESS;;
+
++arrPlots=(MapName="plot_WLD_LgObj_Circles_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GP_PsiGate")
+
++arrPlots=(MapName="plot_WLD_LgObj_Hike_EMM_02", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GP_PsiGate")
+
++arrPlots=(MapName="plot_WLD_LgObj_Hike_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="SecureUFO")
+
++arrPlots=(MapName="plot_WLD_LgObj_Rivers_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="Sabotage")
+
+;;SMALL TOWN;;
+
++arrPlots=(MapName="plot_TWN_MdObj_Downtown_EMM_02", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
++arrPlots=(MapName="plot_TWN_MdObj_Downtown_EMM_03", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
++arrPlots=(MapName="plot_TWN_MdObj_Suburb_EMM_01", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
+; really is narrow, ~25 tiles
+;+arrPlots=(MapName="plot_TWN_MdObj_Narrow_EMM_01", strType="SmallTown", \\
+;	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+;	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
+; Ted: widened this one to ~45 tiles instead of ~25, and we don't need 2 of them
++arrPlots=(MapName="plot_TWN_MdObj_Narrow_EMM_02", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable")
+
+; good
++arrPlots=(MapName="plot_TWN_MdObj_Fork_EMM_01", strType="SmallTown", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter")
+
+; EMM SUFFER plots:
+
+; EU type premade plot
+
++arrPlots=(MapName="plot_WLD_LgObj_Mount_EMM_01", strType="Wilderness", FloorCount=4, \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="SecureUFO", ObjectiveTags[1]="GP_PsiGate")
+
+; Cool but very open, ATT plot
++arrPlots=(MapName="plot_WLD_MdObj_Landing_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", \\
+	ObjectiveTags[0]="SupplyRaidATT", FloorCount=4)
+
+; Also cool, but narrow, Pier + Bridge:
+ +arrPlots=(MapName="plot_CTY_MdObj_Pier_EMM_01", strType="CityCenter", FloorCount=3, \\
+	ObjectiveTags[0]="CityCenter",  ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="Extract")
+
+ +arrPlots=(MapName="plot_CTY_MdObj_Bridge_EMM_01", strType="CityCenter", FloorCount=3, \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Extract", ObjectiveTags[2]="SabotageCC")
+
+; "harder" UFO avenger defense maps with forced LOS blocking for the disruptor
++arrPlots=(MapName="plot_WLD_AvDef_Suffer_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="AvengerDef")
+
++arrPlots=(MapName="plot_WLD_AvDef_Suffer_EMM_02", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="AvengerDef")
+
++arrPlots=(MapName="plot_WLD_AvDef_Mount_EMM_01", strType="Wilderness", FloorCount=4, \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+	ObjectiveTags[0]="AvengerDef")
+
+; Flooded avenger defense parcel, less cover but you can squadsight the objective
+
++arrPlots=(MapName="plot_WLD_AvDef_Flood_EMM_01", strType="Wilderness", FloorCount=5, \\
+	ValidBiomes[0]="Temperate", \\
+	ObjectiveTags[0]="AvengerDef")
+
+; 
++arrPlots=(MapName="plot_CTY_MdObj_Trench_EMM_01", strType="CityCenter", FloorCount=4, \\
+	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Extract", ObjectiveTags[2]="SabotageCC")
+
++arrPlots=(MapName="Plot_WLD_LgObj_Wetlands_EMM_01", strType="Wilderness", \\
+	ValidBiomes[0]="Temperate", \\
+	ObjectiveTags[0]="SupplyRaidConvoy", ObjectiveTags[1]="RecoverFD")
+
+
++arrPlots=(MapName="plot_TWN_SmObj_SplitHouse_EMM_01", strType="SmallTown", FloorCount=4, \\
+	ValidBiomes[0]="Temperate", \\
+	ObjectiveTags[0]="GOps_Vehicle", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="DestroyTransmitter", ObjectiveTags[3]="GuerillaOps")
+
++arrPlots=(MapName="plot_TWN_LgObj_WarehouseParking_EMM_01", strType="SmallTown", FloorCount=4, \\
+	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
+	ObjectiveTags[0]="GOps_Vehicle", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="GuerillaOps")
