--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -188,3 +188,64 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 +arrAllParcelDefinitions=(MapName="md_Monument_05", eSize=eParcelSizeType_Medium, \\
 	arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, \\
 	ObjectiveTags[0]="SabotageCC")
+
+; EMM others:
+
+; This one crashes the editor trying to open it
+;+arrAllParcelDefinitions=(MapName="sm_Cottage_Vacant", eSize=eParcelSizeType_Small, \\
+;	arrZoneTypes[0]="Neighborhood", arrPlotTypes[0]=(strPlotType="SmallTown"), eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="md_Warehouse_02", eSize=eParcelSizeType_Medium, \\
+	arrPlotTypes[0]=(strPlotType="SmallTown"), arrZoneTypes[0]="Retail", arrZoneTypes[1]="whse", \\
+	bHasEntranceS1=true, bHasEntranceS2=true, bForceEntranceCount=1, \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", ObjectiveTags[5]="NeutralizeCommander", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="lg_ObCourse_01", eSize=eParcelSizeType_Large, \\
+	arrZoneTypes[0]="Shanty", arrPlotTypes[0]=(strPlotType="Shanty"), eFacing=EParcelFacingType_S, \\
+	ObjectiveTags[0]="Terror", ObjectiveTags[1]="ChosenRetaliation", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="lg_Warehouse_01", eSize=eParcelSizeType_Large, \\
+	arrZoneTypes[0]="Retail", arrZoneTypes[1]="whse", arrPlotTypes[0]=(strPlotType="SmallTown"), \\
+	bHasEntranceN1=true, bHasEntranceN2=true,  bForceEntranceCount=1, \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", ObjectiveTags[5]="NeutralizeCommander", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="md_ParkingLot_01", eSize=eParcelSizeType_Medium, \\
+	arrZoneTypes[0]="Retail", arrZoneTypes[1]="prkg", arrPlotTypes[0]=(strPlotType="SmallTown"), \\
+	bHasEntranceS1=true, bHasEntranceS2=true, bForceEntranceCount=2, \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", ObjectiveTags[5]="NeutralizeCommander", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="lg_Chasm_01", eSize=eParcelSizeType_Large, \\
+	arrZoneTypes[0]="Developed", arrZoneTypes[1]="Wilderness", arrPlotTypes[0]=(strPlotType="Wilderness"), \\
+	bHasEntranceE1=true, bHasEntranceE2=true, bHasEntranceW1=true, bHasEntranceW2=true, bHasEntranceN1=true, bHasEntranceN2=true, bHasEntranceS1=true, bHasEntranceS2=true, \\
+	ObjectiveTags[0]="AvengerDefense", bAllowNonObjectiveOverride=true)
+
+; SUFFER ones:
++arrAllParcelDefinitions=(MapName="md_Corridor_01", eSize=eParcelSizeType_Medium, \\
+	arrZoneTypes[0]="Neighborhood", arrPlotTypes[0]=(strPlotType="SmallTown"), \\
+	eFacing=EParcelFacingType_N, bHasEntranceN1=true, bForceEntranceCount=1, \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="md_Fountain_01", eSize=eParcelSizeType_Medium, \\
+	arrZoneTypes[0]="Retail", arrZoneTypes[1]="Neighborhood", arrPlotTypes[0]=(strPlotType="SmallTown"), \\
+	bHasEntranceN2=true, bHasEntranceS1=true, bForceEntranceCount=1, \\
+	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
+	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="sm_Chasm_01", eSize=eParcelSizeType_Small, \\
+	arrZoneTypes[0]="Developed", arrZoneTypes[1]="Wilderness", arrPlotTypes[0]=(strPlotType="Wilderness"), \\
+	bHasEntranceE1=true, bHasEntranceW1=true, bHasEntranceN1=true, bHasEntranceS1=true, \\
+	ObjectiveTags[0]="AvengerDefense", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="sm_70s_01", eSize=eParcelSizeType_Small, \\
+	arrZoneTypes[0]="Neighborhood", arrPlotTypes[0]=(strPlotType="SmallTown"), eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="sm_Cottage_03", eSize=eParcelSizeType_Small, \\
+	arrZoneTypes[0]="Neighborhood", arrPlotTypes[0]=(strPlotType="SmallTown"), eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true)
+
+; Reshi parcel
+
++arrAllParcelDefinitions=(MapName="ReshiParcel_CityParking_LAR",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", eFacing=EParcelFacingType_N bAllowNonObjectiveOverride=true)
