--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -52,7 +52,7 @@
 +arrPlots=(MapName="plot_CTY_LgObj_H_EMM_01", strType="CityCenter", \\
 	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="Council", ObjectiveTags[2]="Extract", ObjectiveTags[3]="Vehicle")
 
-; SLM_Overpass_LgObj_10_LW is now fixed, if it's still broken for you, you need the latest content directories if you're building your own LWOTC install
+; SLM_Overpass_LgObj_10_LW is now fixed (and cooked), if it's still broken for you, you need the latest content directories if you're building your own LWOTC install
 +arrPlots=(MapName="Plot_SLM_Overpass_LgObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_10_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_11_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
